public/main.css
html, body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Fira Sans', sans-serif;
  color: black;
  background-color: white;
}

.container {
  max-width: 600px;
  min-height: 100vh;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

/* Navbar Styles */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 100px;
  flex-wrap: wrap;
  margin-top: 10px;
}

nav ul {
  display: flex;
  margin-right: 30px;
}

nav ul li {
  list-style: none;
  margin: 10px;
  font-size: 17px;
}

nav ul li a:hover {
  border-bottom: 2px solid black;
}

nav .logo {
  margin-left: 30px;
  display: flex;
  align-items: center;
}

nav ul li a {
  text-decoration: none;
  color: black;
}

nav .logo img {
  height: 50px;
  width: 50px;
}
/* End Navbar Styles */

/* Main Styles */
main {
  flex: 1;
  display: flex;
}

main .main-container {
  margin-left: 30px;
  margin-right: 30px;
  display: flex;
  flex-direction: column;
}

main header {
  font-size: 30px;
  font-weight: bold;
}

main p {
  font-size: 17px;
}

main p a {
  color: blue;
  text-decoration: none;
  font-weight: bold;
}

main p a:hover {
  border-bottom: 2px solid blue;
}

main .index-container img {
  border-radius: 50%;
  height: 170px;
  width: 170px;
}

main .index-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: 30px;
  margin-right: 30px;
  width: 100vh;
}

main .index-container .title, .subtitle {
  text-align: center;
  font-weight: bold;
  margin-top: 20px;
}

main .index-container .title {
  font-size: 40px;
}

main .index-container .subtitle {
  font-size: 25px;
}

main .index-container .social-icons .fa {
  margin-top: 20px;
  padding: 10px;
  font-size: 40px;
  text-align: center;
  text-decoration: none;
}

main .index-container .social-icons .fa:hover {
  opacity: 0.7;
}

.fa-linkedin {
  color: #2867B2;
}

.fa-github {
  color: #333;
}

.fa-twitter {
  color: #1DA1F2;
}

main .contact-container {
  margin-top: 15px;
  margin-bottom: 15px;
  margin-left: 30px;
  margin-right: 30px;
  width: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

main .contact-container table {
  margin-top: 10px;
  border-collapse: separate;
  border-spacing: 0 10px;
  text-align: left;
  font-size: 25px;
}

main .contact-container table tr td a {
  color: blue;
  text-decoration: none;
  font-weight: bold;
}

main .contact-container table tr td a:hover {
  border-bottom: 2px solid blue;
}

main .project-container {
  margin-top: 15px;
  margin-bottom: 15px;
  margin-left: 30px;
  margin-right: 30px;
  width: 100vh;
  display: flex;
  flex-direction: column;
}

main .error-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vh;
}

main .error-container h1 {
  font-size: 100px;
  padding-right: 22px;
  animation: type .5s alternate infinite;
}

@keyframes type{
  from{box-shadow: inset -7px 0px 0px #888;}
  to{box-shadow: inset -7px 0px 0px transparent;}
}

/* End Main Styles */

/* Footer Styles */
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100px;
  font-size: 17px;
}
/* End Footer Styles */

/* Mobile Styles */
@media only screen and (max-width: 600px) {
  main .contact-container table {
    font-size: 20px;
  }
}
/* End Mobile Styles */

